--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,6 @@
 version: '3.8'
 
 services:
-  ambassador-service:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - "8080:8080"
-    environment:
-      - SPRING_PROFILES_ACTIVE=docker
-      - SPRING_REDIS_HOST=redis
-      - EXTERNAL_SERVICES_USER_SERVICE_URL=http://user-service-mock:8081
-      - EXTERNAL_SERVICES_PRODUCT_SERVICE_URL=http://product-service-mock:8082
-    depends_on:
-      - redis
-      - user-service-mock
-      - product-service-mock
-    networks:
-      - ambassador-network
-
   redis:
     image: redis:7.2-alpine
     ports:
@@ -53,33 +35,33 @@ services:
     networks:
       - ambassador-network
 
-  prometheus:
-    image: prom/prometheus:v2.45.0
-    ports:
-      - "9090:9090"
-    volumes:
-      - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
-    command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
-      - '--storage.tsdb.path=/prometheus'
-      - '--web.console.libraries=/usr/share/prometheus/console_libraries'
-      - '--web.console.templates=/usr/share/prometheus/consoles'
-      - '--web.enable-lifecycle'
-    networks:
-      - ambassador-network
-
-  grafana:
-    image: grafana/grafana:10.0.0
-    ports:
-      - "3000:3000"
-    environment:
-      - GF_SECURITY_ADMIN_PASSWORD=admin
-    volumes:
-      - grafana-data:/var/lib/grafana
-      - ./monitoring/grafana/dashboards:/etc/grafana/provisioning/dashboards
-      - ./monitoring/grafana/datasources:/etc/grafana/provisioning/datasources
-    networks:
-      - ambassador-network
+#  prometheus:
+#    image: prom/prometheus:v2.45.0
+#    ports:
+#      - "9090:9090"
+#    volumes:
+#      - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
+#    command:
+#      - '--config.file=/etc/prometheus/prometheus.yml'
+#      - '--storage.tsdb.path=/prometheus'
+#      - '--web.console.libraries=/usr/share/prometheus/console_libraries'
+#      - '--web.console.templates=/usr/share/prometheus/consoles'
+#      - '--web.enable-lifecycle'
+#    networks:
+#      - ambassador-network
+#
+#  grafana:
+#    image: grafana/grafana:10.0.0
+#    ports:
+#      - "3000:3000"
+#    environment:
+#      - GF_SECURITY_ADMIN_PASSWORD=admin
+#    volumes:
+#      - grafana-data:/var/lib/grafana
+#      - ./monitoring/grafana/dashboards:/etc/grafana/provisioning/dashboards
+#      - ./monitoring/grafana/datasources:/etc/grafana/provisioning/datasources
+#    networks:
+#      - ambassador-network
 
 volumes:
   redis-data:
